added in the coding for the red arrow in the nav bar

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,6 +9,21 @@ nav {
   justify-content: space-between;
 }
 
+
 span {
   font-family: Bungee;
+}
+
+
+i {
+  display: block;
+  color: crimson;
+  justify-content: end;
+  align-items: baseline;
+}
+
+.right-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
