--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,7 +6,10 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -18,24 +21,22 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
-  font-family: Source Sans Pro, sans-serif; 
+  font-family: Source Sans Pro, sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- /*
+/*
  * Main layout CSS 
  */
- main {
-   display: flex;
-   flex-direction: column;
-   background-color: #f4f1ec;
-   width: 90%;
-   margin: auto;
-   justify-content: center;
-   align-items: center;
- }
-
-
+main {
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f1ec;
+  width: 90%;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+}
