--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,6 +12,9 @@
  </section>
 </main> */
 
+ section {
+   width: 100%
+ }
 
  label {
    display: flex;
@@ -20,8 +23,8 @@
  }
 
  textarea {
-   height: 65px;
-   width: 400px;
+   height: 50px;
+   width: 100%;
    border: 0ch;
    background-color: #f4f1ec;
    border-bottom: .2rem solid;
