updated CSS to include a section for the .red class of output for the counter when it hits 0 or below

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -53,3 +53,12 @@
    background-color: #f4f1ec;
    font-family: Bungee, sans-serif;
  }
+
+ .red-font {
+   display: flex;
+   justify-content: flex-end;
+   align-items: baseline;
+   color: red;
+   background-color: #f4f1ec;
+   font-family: Bungee, sans-serif;
+ }
