--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,7 @@
 nav {
   display: flex;
+  position: fixed;
+  top: 0;
   height: 120px;
   width: 100%;
   padding: 1.5em;
@@ -20,6 +22,8 @@ nav i {
 }
 
 .right-display {
+  /* position: fixed;
+  width: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
