--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -28,7 +28,7 @@ button {
   display: flex;
   align-items: baseline;
   color: #FFFFFF;
-  background-color: #4056A1;
+  background-color: #006666;
   font-family: Bungee, sans-serif;
 }
 
