--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -14,6 +14,7 @@ nav {
 
 span {
   font-family: Bungee, sans-serif;
+  font-size: 36px;
 }
 
 
@@ -22,8 +23,6 @@ nav i {
 }
 
 .right-display {
-  /* position: fixed;
-  width: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
