--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -64,6 +64,8 @@ article.tweets footer {
   width: 95%;
   height: fit-content;
   margin: auto;
+  padding-left: 20px;
+  padding-right: 20px;
   border-top: .15em solid black;
   padding-top: .40em;
   padding-bottom: .40em;
