added css code to have arrow change color when it is hovered on to indicate it is a button

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -24,7 +24,12 @@ span {
 
 
 nav i {
-  color: #66CDAA
+  color: #66CDAA;
+  position: relative;
+}
+
+nav i:hover {
+  color: rgb(240, 215, 23);
 }
 
 .right-display {
