--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -66,10 +66,10 @@ article.tweets footer {
   margin: auto;
   padding-left: 20px;
   padding-right: 20px;
-  border-top: .15em solid black;
   padding-top: .40em;
   padding-bottom: .40em;
-  font-size: medium;
+  border-top: .15em solid black;
+  font-size: large;
 }
 
 /* Icons in Footer: */
@@ -77,6 +77,7 @@ article.tweets footer {
 p.images {
   color: cadetblue;
   padding: .15em;
+  font-family: monospace;
 }
 
 p.images i:hover {
