--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -15,3 +15,24 @@ h2 {
   color: #293d3d
 }
 
+
+header.profile img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+
+
+@media (min-width: 1024px) {
+  header.profile {
+    display: flex;
+    margin-top: 0px;
+    width: 30%;
+    margin-left: 50px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: -10;
+  }
+}
