implemented media CSS for 1024px breakpoint

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -41,3 +41,11 @@ main {
   align-items: center;
 }
 
+main div.uparrow {
+  color: #006666;
+  font-size: 75px;
+}
+
+main div.uparrow:hover {
+  color: #66CDAA;
+}
