--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,7 +2,6 @@ body {
   overscroll-behavior: none;
 }
 
-
 nav {
   display: flex;
   position: fixed;
@@ -16,19 +15,17 @@ nav {
   justify-content: space-between;
 }
 
-
 span {
   font-family: Bungee, sans-serif;
   font-size: 36px;
 }
 
-
 .right-display {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-wrap: anywhere;
 }
-
 
 .right-display i {
   padding-top: 5px;
@@ -38,7 +35,6 @@ span {
 .right-display i:hover {
   color: #ccff99;
 }
-
 
 p {
   justify-content: center;
