--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -93,6 +93,13 @@ div.error {
 }
 
 @media (min-width: 1024px) {
+  div.error {
+    margin-top: 0px;
+  }
+}
+
+
+@media (min-width: 1024px) {
   body {
     display: flex;
     flex-direction: row;
@@ -101,6 +108,6 @@ div.error {
 
   h2 {
     margin-top: 0px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 }
