--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,10 +1,7 @@
-/*Main CSS for Tweet Section*/
-
 section.tweets-container {
   background-color: #f4f1ec;
   height: fit-content;
 }
-
 
 article.tweets {
   background-color: #f4f1ec;
@@ -14,21 +11,18 @@ article.tweets {
   border: .15em solid black;
 }
 
-/*Hover CSS for Tweet Section*/
-
 article.tweets:hover {
   box-shadow: 5px 5px #66CDAA;
 }
 
-/*Main CSS for Header*/
 article.tweets header {
   display: flex;
   height: fit-content;
+  overflow-wrap: anywhere;
   align-items: center;
   padding: 20px;
 }
 
-/*CSS for the name on left*/
 header div.name {
   margin-right: 10px;
   margin-left: 10px;
@@ -36,17 +30,14 @@ header div.name {
   width: 100%;
 }
 
-/*CSS for Names in header*/
 header h3 {
   padding-right: 5px;
 }
 
-/*CSS for Tagname on righthand side*/
 header h3.color {
   color: cadetblue;
 }
 
-/*CSS for Tweet body*/
 article.tweets div.tweet-text {
   overflow-wrap: anywhere;
   padding-bottom: 20px;
@@ -56,8 +47,6 @@ article.tweets div.tweet-text {
   ;
 }
 
-
-/*Main CSS for footer*/
 article.tweets footer {
   display: flex;
   justify-content: space-between;
@@ -71,8 +60,6 @@ article.tweets footer {
   border-top: .15em solid black;
   font-size: large;
 }
-
-/* Icons in Footer: */
 
 p.images {
   color: cadetblue;
